Changelog
=========

0.0.9 (unreleased)
------------------

- Nothing changed yet.


0.0.8 (2012-06-06)
------------------

- Fix unskinned 'building' view on ``/projects/wibble/`` url handler.


0.0.7 (2012-06-06)
------------------

- Brown paper bag release.


0.0.6 (2012-06-06)
------------------

- The pollers are now named - this allows them to be triggered by a change
  hook.


0.0.5 (2012-06-05)
------------------

- SVN poller configuration is subclassable


0.0.4 (2012-06-05)
------------------

- Custom MailNotifier that makes use of .travis.yml


0.0.3 (2012-06-05)
------------------

- Nothing changed yet.


0.0.2 (2012-05-30)
------------------

- Nothing changed yet.


0.0.1 (2012-04-22)
------------------

- Builds triggered by spawner build step get marked with a ``spawned_by``
  property so we can relate them to their parent builds.

- Add a HtmlResource for showing ``/console`` style views of builds.

- Take advantage of features in Buildbot 0.8.6 and later.

- Fix hideStepIf and flunking options

- Custom steps should be interruptable


0.0.0 (2012-04-11)
------------------

- Initial release
